; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt_ethtool.c_bnxt_erase_nvram_directory.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt_ethtool.c_bnxt_erase_nvram_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.bnxt = type { i32 }
%struct.hwrm_nvm_erase_dir_entry_input = type { i32, i32 }

@HWRM_NVM_ERASE_DIR_ENTRY = common dso_local global i32 0, align 4
@HWRM_CMD_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @bnxt_erase_nvram_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnxt_erase_nvram_directory(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bnxt*, align 8
  %6 = alloca %struct.hwrm_nvm_erase_dir_entry_input, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.net_device*, %struct.net_device** %3, align 8
  %8 = call %struct.bnxt* @netdev_priv(%struct.net_device* %7)
  store %struct.bnxt* %8, %struct.bnxt** %5, align 8
  %9 = bitcast %struct.hwrm_nvm_erase_dir_entry_input* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %9, i8 0, i64 8, i1 false)
  %10 = load %struct.bnxt*, %struct.bnxt** %5, align 8
  %11 = load i32, i32* @HWRM_NVM_ERASE_DIR_ENTRY, align 4
  %12 = call i32 @bnxt_hwrm_cmd_hdr_init(%struct.bnxt* %10, %struct.hwrm_nvm_erase_dir_entry_input* %6, i32 %11, i32 -1, i32 -1)
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @cpu_to_le16(i32 %13)
  %15 = getelementptr inbounds %struct.hwrm_nvm_erase_dir_entry_input, %struct.hwrm_nvm_erase_dir_entry_input* %6, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = load %struct.bnxt*, %struct.bnxt** %5, align 8
  %17 = load i32, i32* @HWRM_CMD_TIMEOUT, align 4
  %18 = call i32 @hwrm_send_message(%struct.bnxt* %16, %struct.hwrm_nvm_erase_dir_entry_input* %6, i32 8, i32 %17)
  ret i32 %18
}

declare dso_local %struct.bnxt* @netdev_priv(%struct.net_device*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @bnxt_hwrm_cmd_hdr_init(%struct.bnxt*, %struct.hwrm_nvm_erase_dir_entry_input*, i32, i32, i32) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @hwrm_send_message(%struct.bnxt*, %struct.hwrm_nvm_erase_dir_entry_input*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
